# verifit

./: .dev.env  .gitignore  LICENSE  MANIFEST.in  Readme.md  conftest.py  pyproject.toml  requirements.txt  run-tests.sh
echo-service/: test_echo_service.py
kitchen-service/: test_kitchen_service.py
lib/: __init__.py  cache.py  config.py  date_and_time.py  driver.py  login.py  web_sockets.py
lib/shell/: lib.sh
post-service/: run-post-service-tests.sh
post-service/post/: post-service-1_post.py  post-service-2_post.py  test_post.py
shopping-service/: carts.feature  shopping-service_login.py  test_carts.py  test_login.py  test_products.py  user.py
src/: __init__.py
src/lib/: __init__.py  basic_runner.py  cache.py  collected_tests.py  config.py  config_tool.py  driver.py  exceptions.py  generate.py  graphql_tool.py  login.py  mobile_tool.py  relative_path.py  results.py  runner.py  web_sockets.py  websockets_tool.py
src/test/graphql/: test_graphql.py
src/test/hello/: test_hello.json  test_hello.py
src/test/localhost8201/: login.py  test_localhost8201_content.py
src/test/mobiledemo/: conftest.py  test_mobiledemo_android.py  test_mobiledemo_ios.py
src/verifit/: __init__.py  cache.py  config.py  date_and_time.py  date_tools.py  driver.py  http_server.py  iam_token.py  login.py  memoize.py  prop.py  retrieve.py  web_hooks.py  web_sockets.py
test/: test_endpoint_tools.py  test_login.py
tests/: .dev.env  __init__.py  conftest.py  login_before_test.py  pytest.ini  requirements.txt
tests/cache/: test_cache.py
tests/date-service/: test_date.py
tests/echo-service/: test_echo_service.py
tests/echo_service/: test_echo_service.py
tests/kitchen-service/: test_kitchen_service.py
tests/kitchen_service/: test_kitchen_service.py
tests/notice/: my-schema.graphql  test_notice.py
tests/self_check/: test_self.py
tests/send_notice/: test_notice.py  test_send_notice.py
tests/shopping-service/: shopping-service_login.py  test_carts.py  test_login.py  test_products.py  user.py
(+41 files in other folders)
