[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { 'verifit' = 'src' }
packages = ['verifit']

[tool.check-manifest]
ignore = [".pytest_cache/*", "__pycache__/**/*"]

[project]
name = "verifit"
version = "5.0.2"
description = "Verify It: Small automatic testing helper tools"
readme = "Readme.md"
authors = [{ name = "Sorel Mitra", email = "sorelmitra@yahoo.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["automatic testing tools", "acceptance testing tools"]
dependencies = [
    "PyJWT",
    "pytest"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/sorelmitra/verifit"

